@@ -1,13 +1,15 @@
 version 0.5.0 - dd-MMM-yyyy
  . Actions: copy protocol fixed on some actions (issue #27)
  . Chipmunk: using newest version from svn (issue #34)
+ . CocosNode: Nodes not being dealloced with active actions (issue #25)
  . CocosNode: Doxygen API reference fixed (issue #29)
  . Director: Doxygen API reference fixed (issue #29)
+ . Director: Display FPS are rendered 10 times per second (issue #37)
  . LabelAtlas: Fast render update Label (issue #36) (*NEW_FEATURE*)
  . MenuItem: sending correct 'self' as argument (issue #19)
  . Misc: improved cocos2d icon and default image (issue #33)
- . TextureAtlas: Object to render indexed vertex arrays (issue #32) (*NEW_FEATURE*)
- . TileMapAtlas: Map Tile rendered (issue #35) (*NEW_FEATURE*)
+ . TextureAtlas: Object to render indexed vertex arrays from 1 texture (issue #32) (*NEW_FEATURE*)
+ . TileMapAtlas: Tile Map renderer (issue #35) (*NEW_FEATURE*)
  . TextureMgr: added removeAllTextures (issue #31)
  . Scheduler: retain arguments (issue #28)
 
